# AutoSDV-ZCU

./: CMakeLists.txt  README.md
idl/: ControlCommand.idl  Image.idl  Status.idl
include/camera_module/: Image.h  ImageCdrAux.hpp  ImageCdrAux.ipp  ImagePubSubTypes.h  camera_server.hpp
include/control_module/: ControlCommand.h  ControlCommandCdrAux.hpp  ControlCommandCdrAux.ipp  ControlCommandPubSubTypes.h  control_subscriber.hpp  s32g3_skku_can_setting.h
include/status_module/: Status.h  StatusCdrAux.hpp  StatusCdrAux.ipp  StatusPubSubTypes.h  s32g3_skku_can_setting.h  status_publisher.hpp
src/: main.cpp
src/camera_module/: Image.cxx  ImagePubSubTypes.cxx  camera_server.cpp
src/control_module/: ControlCommand.cxx  ControlCommandPubSubTypes.cxx  control_subscriber.cpp  s32g3_skku_can_setting.c
src/status_module/: Status.cxx  StatusPubSubTypes.cxx  s32g3_skku_can_setting.c  status_publisher.cpp
